Fixing layout issues with home page. Workaround by using straight HTML rather than MD

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,9 +35,43 @@
         vertical-align: middle;
     }
     
-    img[alt=icon] { 
-        max-width: 35%;
+    img[alt=icon] {
+        display: flex;
+        position: relative;
+        float: left;
+        max-width: 25%;
+        padding-right: 40px;
         margin: 0;
+    }
+    
+    span.icon-image { 
+        position: relative;
+        float: left;
+        min-width: 100px;
+        max-width: 25%;
+        padding-right: $spacing-unit;
+        margin: 0;
+    }
+    
+    img.icon-image {
+        padding: $spacing-unit 0;
+    }
+    
+    div.icon-image {
+        text-align: left;
+        display: inline-block;
+        padding-top: $spacing-unit;
+        
+        ul {
+            display: block;
+            margin: 0;
+            padding-left: $spacing-unit;
+            padding-bottom: $spacing-unit;
+        }
+    }
+
+    div.row {
+        display: inline-block;
     }
 
     figure > img {
